# pyoco-server

./: README.md  README_ja.md  main.py  pyproject.toml
.codex/skills/delta-apply/: SKILL.md
.codex/skills/delta-archive/: SKILL.md
.codex/skills/delta-request/: SKILL.md
.codex/skills/delta-verify/: SKILL.md
docs/: OVERVIEW.md  architecture.md  archtecture.md  concept.md  config.md  library_api.md  plan.md  quickstart.md  spawn_bundle_requirements.md  spec.md  tutorial_multi_worker.md
docs/delta/: DR-20260308-spawn-bundle.md  DR-20260401-managed-e2e-smoke.md  DR-20260401-schedule-run-list.md  DR-20260401-server-with-worker-verify.md  DR-20260401-server-with-worker.md  DR-20260401-test-fixes.md  DR-20260401-version-070.md  DR-20260401-yaml-schedule.md  TEMPLATE.md
examples/: hello_flow.py  run_worker.py  submit_run.py
src/pyoco_server/: __init__.py  _workflow_test_tasks.py  admin_cli.py  auth.py  bundle_runtime.py  client.py  client_cli.py  config.py  dlq.py  http_api.py  http_client.py  logging_config.py  models.py  resources.py  schedules.py  server_cli.py  trace.py  worker.py  worker_cli.py  workflow_yaml.py
src/pyoco_server/static/: app.js  index.html  styles.css
tests/: test_auth.py  test_client_cli.py  test_config_from_env.py  test_dashboard_playwright_e2e.py  test_logging_config.py  test_nats_e2e.py  test_server_cli.py  test_snapshot_compaction.py  test_spawn_bundle_e2e.py  test_wheel_registry.py  test_worker_cli.py  test_workflow_yaml.py
